--- a/input/topology_atomistic.tex
+++ b/input/topology_atomistic.tex
@@ -7,8 +7,7 @@ A custom topology can also be defined using an \xml file. Moreover, it s possibl
 
 \begin{figure}[ht]
 \centering
-\includegraphics[width=0.45\textwidth]{./fig/chemical_structure/dcv2t_atom_types}\,
-\includegraphics[width=0.45\textwidth]{./fig/chemical_structure/dcv2t_gaussian}
+\includegraphics[width=\textwidth]{./fig/chemical_structure/dcv2t}
 \caption{\small (a) \dcvt with atoms labelled according to \texttt{residue\_number:residue\_name:atom\_name}. There are four residues and two residue types: thiophene (THI) and dicyanovinyl (NIT). The corresponding pdb file is shown in listing~\ref{list:pdb}. (b) Atom numbering is used to split conjugated segments on rigid fragments and to link atomistic and quantum descriptions.}
 \label{fig:dcv2t}
 \end{figure}
@@ -21,5 +20,6 @@ A custom topology can also be defined using an \xml file. Moreover, it s possibl
   frame=lines,
   label=list:pdb, 
   morekeywords={HETATM,THI,NIT},
-  caption={\small pdb file of \dcvt.}]%
+  caption={ pdb file of \dcvt.}]%
 {./input/dcv2t/dcv2t.pdb}
+\vfill
