placeholders for gdma and Thole model

--- a/manual.bib
+++ b/manual.bib
@@ -193,6 +193,22 @@
 	pages = {094201}
 },
 
+@article{stone_distributed_2005,
+	title = {Distributed Multipole Analysis:  Stability for Large Basis Sets},
+	volume = {1},
+	issn = {1549-9618},
+	shorttitle = {Distributed Multipole Analysis},
+	url = {http://dx.doi.org/10.1021/ct050190+},
+	doi = {10.1021/ct050190+},
+	abstract = {The distributed multipole analysis procedure, for describing a molecular charge distribution in terms of multipole moments on the individual atoms (or other sites) of the molecule, is not stable with respect to a change of basis set, and indeed, the calculated moments change substantially and unpredictably when the basis set is improved, even though the resulting electrostatic potential changes very little. A revised procedure is proposed, which uses grid-based quadrature for partitioning the contributions to the charge density from diffuse basis functions. The resulting procedure is very stable, and the calculated multipole moments converge rapidly to stable values as the size of the basis is increased.
+The distributed multipole analysis procedure, for describing a molecular charge distribution in terms of multipole moments on the individual atoms (or other sites) of the molecule, is not stable with respect to a change of basis set, and indeed, the calculated moments change substantially and unpredictably when the basis set is improved, even though the resulting electrostatic potential changes very little. A revised procedure is proposed, which uses grid-based quadrature for partitioning the contributions to the charge density from diffuse basis functions. The resulting procedure is very stable, and the calculated multipole moments converge rapidly to stable values as the size of the basis is increased.},
+	number = {6},
+	journal = {J. Chem. Theory Comput.},
+	author = {Stone, Anthony J.},
+	year = {2005},
+	pages = {1128--1132}
+},
+
 @article{hoffman_reorganization_1996,
 	title = {Reorganization energies and rate constants for electron reactions in glass-forming media and proteins},
 	volume = {243},
@@ -252,15 +268,7 @@
 	pages = {2339--2350}
 },
 
-@article{ruehle_microscopic_2011,
-	title = {Microscopic simulations of charge transport in disordered organic semiconductors},
-	doi = {10.1021/ct200388s},
-	journal = {Journal of Chemical Theory and Computation},
-	author = {R\"{u}hle, Victor and Lukyanov, Alexander and May, Falk and Schrader, Manuel and Vehoff, Thorsten and Kirkpatrick, James and Baumeier, Bj\"{o}rn and Andrienko, Denis},
-	year = {2011}
-},
-
-@article{vukmirovi_charge_2008,
+@article{vukmirovic_charge_2008,
 	title = {Charge patching method for electronic structure of organic systems},
 	volume = {128},
 	issn = {00219606},
@@ -273,7 +281,7 @@
 	pages = {121102}
 },
 
-@article{vukmirovi_charge_2009,
+@article{vukmirovic_charge_2009,
 	title = {Charge Carrier Motion in Disordered Conjugated Polymers: A Multiscale Ab Initio Study},
 	volume = {9},
 	shorttitle = {Charge Carrier Motion in Disordered Conjugated Polymers},
@@ -286,6 +294,21 @@
 	month = dec,
 	year = {2009},
 	pages = {3996--4000}
+},
+
+@article{thole_molecular_1981,
+	title = {Molecular polarizabilities calculated with a modified dipole interaction},
+	volume = {59},
+	issn = {0301-0104},
+	url = {http://www.sciencedirect.com/science/article/B6TFM-44FFCTH-7N/2/505b8e4da14d44fb6d3f41d11a2f38b1},
+	doi = {10.1016/0301-0104(81)85176-2},
+	abstract = {The point dipole interaction model for molecular polarizability recently proposed by Applequist, Carl, and Fung is modified by replacing the point dipole interaction by an interaction between smeared out dipoles. Rules are developed to indicate plausible forms for this modified interaction. The polarizabilities of a wide range of chemically different molecules can be calculated, using for each atom one polarizability independent of its chemical enviromnent. The errors are comparable to experimental uncertainty. Special care is taken to produce a model that tends to avoid infinite polarizabilities without use of cutoffs at short distances.},
+	number = {3},
+	journal = {Chemical Physics},
+	author = {Thole, {B.T.}},
+	month = aug,
+	year = {1981},
+	pages = {341--350}
 },
 
 @article{bortz_new_1975,
@@ -372,7 +395,7 @@
 	pages = {5447}
 },
 
-@article{baessler_charge_1993,
+@article{bassler_charge_1993,
 	title = {Charge Transport in Disordered Organic Photoconductors a Monte Carlo Simulation Study},
 	volume = {175},
 	issn = {03701972},
@@ -408,12 +431,12 @@
 	abstract = {We analyze the relationship among the molecular structure, morphology, percolation network, and charge carrier mobility in four organic crystals: rubrene, indolo[2,3-b]carbazole with {CH3} side chains, and benzo[1,2-b:4,5-b']bis[b]benzothiophene derivatives with and without {C4H9} side chains. Morphologies are generated using an all-atom force field, while charge dynamics is simulated within the framework of high-temperature nonadiabatic Marcus theory or using semiclassical dynamics. We conclude that, on the length scales reachable by molecular dynamics simulations, the charge transport in bulk molecular crystals is mostly limited by the dynamic disorder, while in self-assembled monolayers the static disorder, which is due to the slow motion of the side chains, enhances charge localization and influences the transport dynamics. We find that the presence of disorder can either reduce or increase charge carrier mobility, depending on the dimensionality of the charge percolation network. The advantages of charge transporting materials with two- or three-dimensional networks are clearly shown.},
 	number = {33},
 	journal = {Journal of the American Chemical Society},
-	author = {Vehoff, Thorsten and Baumeier, Bjo?rn and Troisi, Alessandro and Andrienko, Denis},
+	author = {Vehoff, Thorsten and Baumeier, Bj\"{o}rn and Troisi, Alessandro and Andrienko, Denis},
 	year = {2010},
 	pages = {11702--11708}
 },
 
-@article{ruehle_multiscale_2010,
+@article{ruhle_multiscale_2010,
 	title = {A multiscale description of charge transport in conjugated oligomers},
 	volume = {132},
 	issn = {00219606},
@@ -440,7 +463,7 @@
 	pages = {116602}
 },
 
-@article{ruehle_versatile_2009,
+@article{ruhle_versatile_2009,
 	title = {Versatile {Object-Oriented} Toolkit for {Coarse-Graining} Applications},
 	volume = {5},
 	url = {http://dx.doi.org/10.1021/ct900369w},
@@ -452,16 +475,6 @@
 	month = dec,
 	year = {2009},
 	pages = {3211--3223}
-},
-
-@book{may_charge_2003,
-	edition = {2. \"{u}berarb. u. erw. Auflage},
-	title = {Charge and Energy Transfer Dynamics in Molecular Systems},
-	isbn = {3527403965},
-	publisher = {{Wiley-VCH} Verlag {GmbH} \& Co. {KGaA}},
-	author = {May, Volkhard and K\"{u}hn, Oliver},
-	month = dec,
-	year = {2003}
 },
 
 @article{lukyanov_extracting_2010,
