--- a/manual.tex
+++ b/manual.tex
@@ -99,6 +99,8 @@ pdfpagemode=UseNone]{hyperref}
 \input{theory/neighborlist}
 \input{theory/reorganization_energy}
 \input{theory/energetic_disorder}
+\input{theory/gdma}
+\input{theory/thole}
 \input{theory/electronic_couplings}
 \input{theory/rate}
 \input{theory/kmc}
