new input files (map.xml)

--- a/input/topology_coarsegrained.tex
+++ b/input/topology_coarsegrained.tex
@@ -7,7 +7,7 @@ The mapping file (referred here as \xmlcsg) is used by the program \ctpmap to co
 \caption{Description of the \xml mapping file (\xmlcsg).}
 \rowcolors{1}{invisiblegray}{white} {\footnotesize \input{reference/xml/map.xml}}
 \end{table}
-
+%
 % Define new language for listings.
 \lstdefinelanguage{MXML} {
    basicstyle=\ttfamily\scriptsize,
@@ -21,7 +21,7 @@ The mapping file (referred here as \xmlcsg) is used by the program \ctpmap to co
    showtabs=false,
    alsoletter={:},
    keywords = [1]
-   { name,cg_molecule,cg_beads,cg_bead,crgunitname,bead,beads,type,topology,name,ident,maps,map,mapping,weights,position,qm,symmetry },
+   { topology,molecules,molecule,name,mdname,segments,segment,fragments,fragment,mdatoms,qmatoms,localframe,weights},
    keywordstyle={[1]\color{blue}},
 }
 
