--- a/manual.tex
+++ b/manual.tex
@@ -114,7 +114,7 @@ pdfpagemode=UseNone]{hyperref}
 \input{input/topology_atomistic}
 \input{input/topology_coarsegrained}
 
-\input{input/topology_conjseg}
+%\input{input/topology_conjseg}
 \input{input/orbitals_zindo}
 \input{input/output_dft}
 \input{input/statefile}
