--- a/manual.bib
+++ b/manual.bib
@@ -584,4 +584,19 @@ The distributed multipole analysis procedure, for describing a molecular charge 
 	month = feb,
 	year = {1991},
 	pages = {285--304}
+},
+
+@article{ruhle_microscopic_2011,
+	title = {Microscopic Simulations of Charge Transport in Disordered Organic Semiconductors},
+	volume = {7},
+	issn = {1549-9618},
+	url = {http://dx.doi.org/10.1021/ct200388s},
+	doi = {10.1021/ct200388s},
+	abstract = {Charge carrier dynamics in an organic semiconductor can often be described in terms of charge hopping between localized states. The hopping rates depend on electronic coupling elements, reorganization energies, and driving forces, which vary as a function of position and orientation of the molecules. The exact evaluation of these contributions in a molecular assembly is computationally prohibitive. Various, often semiempirical, approximations are employed instead. In this work, we review some of these approaches and introduce a software toolkit which implements them. The purpose of the toolkit is to simplify the workflow for charge transport simulations, provide a uniform error control for the methods and a flexible platform for their development, and eventually allow in silico prescreening of organic semiconductors for specific applications. All implemented methods are illustrated by studying charge transport in amorphous films of tris-(8-hydroxyquinoline)aluminum, a common organic semiconductor.
+Charge carrier dynamics in an organic semiconductor can often be described in terms of charge hopping between localized states. The hopping rates depend on electronic coupling elements, reorganization energies, and driving forces, which vary as a function of position and orientation of the molecules. The exact evaluation of these contributions in a molecular assembly is computationally prohibitive. Various, often semiempirical, approximations are employed instead. In this work, we review some of these approaches and introduce a software toolkit which implements them. The purpose of the toolkit is to simplify the workflow for charge transport simulations, provide a uniform error control for the methods and a flexible platform for their development, and eventually allow in silico prescreening of organic semiconductors for specific applications. All implemented methods are illustrated by studying charge transport in amorphous films of tris-(8-hydroxyquinoline)aluminum, a common organic semiconductor.},
+	number = {10},
+	journal = {J. Chem. Theory Comput.},
+	author = {R\"{u}hle, Victor and Lukyanov, Alexander and May, Falk and Schrader, Manuel and Vehoff, Thorsten and Kirkpatrick, James and Baumeier, Bj\"{o}rn and Andrienko, Denis},
+	year = {2011},
+	pages = {3335--3345}
 }
