--- a/titlepage.tex
+++ b/titlepage.tex
@@ -32,12 +32,12 @@ Development of this software depends on academic research grants. If you are usi
 
 \vspace{0.1cm}
 \noindent
-~\cite{ruehle_microscopic_2011} V. R\"uhle, A. Lukyanov, F. May, M. Schrader, T. Vehoff, J. Kirkpatrick, B. Baumeier, D. Andrienko,
+~\cite{ruhle_microscopic_2011} V. R\"uhle, A. Lukyanov, F. May, M. Schrader, T. Vehoff, J. Kirkpatrick, B. Baumeier, D. Andrienko,
 ``Microscopic simulations of charge transport in disordered organic semiconductors'', \htmladdnormallink{\color{black} {\itshape J. Chem. Theor. Comp.} 2011}{http://dx.doi.org/} \\
 
 \vspace{0.1cm}
 \noindent
-~\cite{ruehle_versatile_2009} V. R\"uhle, C. Junghans, A. Lukyanov, K. Kremer, D. Andrienko, 
+~\cite{ruhle_versatile_2009} V. R\"uhle, C. Junghans, A. Lukyanov, K. Kremer, D. Andrienko, 
 ``Versatile Object-oriented Toolkit for Coarse-graining Applications'',
 \htmladdnormallink{ \color{black} {\itshape J. Chem. Theor. Comp.} 5, 3211, 2009}
 {http://dx.doi.org/10.1021/ct900369w}
