more references fixed

--- a/theory/rate.tex
+++ b/theory/rate.tex
@@ -1,7 +1,7 @@
 \section{Charge transfer rate}
 \label{sec:rates}
 
-Charge transfer rates\index{charge transfer rate} can be postulated based on intuitive physical considerations, as it is done in the Gaussian disorder models~\cite{walker_electrical_2002,baessler_charge_1993,borsenberger_charge_1991,pasveer_unified_2005}. Alternatively, charge transfer theories can be used to evaluate rates from quantum chemical calculations~\cite{bredas_molecular_2009,coropceanu_charge_2007,bredas_charge-transfer_2004,nelson_modeling_2009,baumeier_density-functional_2010,ruehle_microscopic_2011}. In spite of being significantly more computationally demanding, the latter approach allows to link the chemical and electronic structure, as well as the morphology, to charge dynamics.
+Charge transfer rates\index{charge transfer rate} can be postulated based on intuitive physical considerations, as it is done in the Gaussian disorder models~\cite{walker_electrical_2002,baessler_charge_1993,borsenberger_charge_1991,pasveer_unified_2005}. Alternatively, charge transfer theories can be used to evaluate rates from quantum chemical calculations~\cite{bredas_molecular_2009,coropceanu_charge_2007,bredas_charge-transfer_2004,nelson_modeling_2009,baumeier_density-functional_2010,ruhle_microscopic_2011}. In spite of being significantly more computationally demanding, the latter approach allows to link the chemical and electronic structure, as well as the morphology, to charge dynamics.
 
 \subsection{Classical charge transfer rate}
 \label{sec:rate_classical}
@@ -32,7 +32,7 @@ where $T$ is the temperature, $\lambda_{ij} = \lambda_{ij}^\text{int} + \lambda_
 The main assumptions in eq.~(\ref{equ:marcus}) are non-adiabaticity (small electronic coupling and  charge transfer between two diabatic, non-interacting states), and harmonic promoting modes, which are treated classically. At ambient conditions, however, the intramolecular promoting mode, which roughly corresponds to C-C bond stretching, has a vibrational energy of $\hbar\omega \approx 0.2\, \unit{eV} \gg k_\text{B}T$ and should be treated quantum-mechanically. The outer-sphere (slow) mode has much lower vibrational energy than the intramolecular promoting mode, and therefore can be treated classically. The weak interaction between molecules also implies that each molecule has its own, practically independent, set of quantum mechanical degrees of freedom.
 
 
-A more general, quantum-classical expression for a bimolecular multi-channel rate is derived in the Supporting Information of ref.~\cite{ruehle_microscopic_2011} and has the following form
+A more general, quantum-classical expression for a bimolecular multi-channel rate is derived in the Supporting Information of ref.~\cite{ruhle_microscopic_2011} and has the following form
 
 \begin{align}
  \omega_{ij}= \frac{2\pi}{\hbar}  \frac{|J_{ij}|^2}{\sqrt{4\pi \lambda_{ij}^\text{out} k_\text{B}T}}
