--- a/theory/gdma.tex
+++ b/theory/gdma.tex
@@ -1,2 +1,5 @@
 \subsection{Distributed multipole analysis}
+\index{distributed multipoles}
+\index{site energy!distributed multipoles}
+
 See the following reference for details~\cite{stone_distributed_2005}.
