--- a/theory/thole.tex
+++ b/theory/thole.tex
@@ -1,2 +1,5 @@
 \subsection{Thole model}
+\index{Thole model}
+\index{site energy!polarization}
+
 See the following reference for details~\cite{thole_molecular_1981}.
