--- a/newcommands.tex
+++ b/newcommands.tex
@@ -28,17 +28,17 @@
 \newcommand{\xmloptions}{\texttt{options.xml}\xspace}
 \newcommand{\xmlcsg}{\hyperref[sec:xmlmap]{\texttt{map.xml}}\xspace}
 \newcommand{\xmlsegments}{\hyperref[sec:xmlsegments]{\texttt{segments.xml}}\xspace}
-\newcommand{\sqlstate}{\texttt{state.db}\xspace}
+\newcommand{\sqlstate}{\hyperref[sec:statefile]{\texttt{state.db}}\xspace}
 \newcommand{\topology}{\texttt{topol.tpr}\xspace}
 \newcommand{\trajectory}{\texttt{traj.xtc}\xspace}
 
-\newcommand{\opt}{\texttt{{ -}-opt}\xspace}
+\newcommand{\opt}{\texttt{{ -}o}\xspace}
 \newcommand{\seg}{\texttt{{ -}s}\xspace}
-\newcommand{\sql}{\texttt{{ -}-db}\xspace}
-\newcommand{\exe}{\texttt{{ -}-exec}\xspace}
-\newcommand{\tpl}{\texttt{{ -}-top}\xspace}
-\newcommand{\csg}{\texttt{{ -}-cg}\xspace}
-\newcommand{\trj}{\texttt{{ -}-trj}\xspace}
+\newcommand{\sql}{\texttt{{ -}f}\xspace}
+\newcommand{\exe}{\texttt{{ -}e}\xspace}
+\newcommand{\tpl}{\texttt{{ -}t}\xspace}
+\newcommand{\csg}{\texttt{{ -}m}\xspace}
+\newcommand{\trj}{\texttt{{ -}c}\xspace}
 
 
 \newcommand{\refcalc}{\hyperref[ref:calculators]{calculators}\xspace}
