CHanged map.xml for manual

--- a/input/topology_atomistic.tex
+++ b/input/topology_atomistic.tex
@@ -8,7 +8,9 @@ A custom topology can also be defined using an \xml file. Moreover, it s possibl
 \begin{figure}[ht]
 \centering
 \includegraphics[width=\textwidth]{./fig/chemical_structure/dcv2t}
-\caption{\small (a) \dcvt with atoms labelled according to \texttt{residue\_number:residue\_name:atom\_name}. There are four residues and two residue types: thiophene (THI) and dicyanovinyl (NIT). The corresponding pdb file is shown in listing~\ref{list:pdb}. (b) Atom numbering is used to split conjugated segments on rigid fragments and to link atomistic and quantum descriptions.}
+\caption{\small (a) \dcvt with atoms labelled according to \texttt{residue\_number:residue\_name:atom\_name}. 
+There are four residues and two residue types: thiophene (THI) and dicyanovinyl (NIT). The corresponding pdb file is shown in listing~\ref{list:pdb}. 
+Atom numbering is used to split conjugated segments on rigid fragments and to link atomistic ((b) from GROMACS topology) and quantum descriptions (c).}
 \label{fig:dcv2t}
 \end{figure}
 
