--- a/input/topology_coarsegrained.tex
+++ b/input/topology_coarsegrained.tex
@@ -1,6 +1,8 @@
 \section{Mapping file}
 \label{sec:xmlmap}
-The mapping file (referred here as \xmlcsg) is used by the program \ctpmap to convert an atomistic trajectory to a trajectory with conjugated segments and rigid fragments. This trajectory is stored in a \slink{statefile}{state file} and contains positions, names, types of atoms belonging to rigid fragments. The description of the mapping options is given in table \ref{tab:map}. An example of \xmlcsg for a \dcvt molecule is shown in listing~\ref{list:map}. 
+The mapping file (referred here as \xmlcsg) is used by the program \ctpmap to convert an atomistic trajectory to a trajectory with conjugated segments and rigid fragments. 
+This trajectory is stored in a \slink{statefile}{state file} and contains positions, names, types of atoms belonging to rigid fragments. 
+The description of the mapping options is given in table \ref{tab:map}. An example of \xmlcsg for a \dcvt molecule is shown in listing~\ref{list:map}. 
 %
 \begin{table}[h]
 \label{tab:map}
