undocumented calcs are not parsed

--- a/theory/analysis.tex
+++ b/theory/analysis.tex
@@ -57,7 +57,7 @@ It can be used to test whether the system is ergodic or not by correlating $\log
 Boltzmann-distributed occupations, $p_i \sim \exp(-\Delta E_{ij} / k_\text{B} T)$, can be generated using the \calc{oboltzmann} calculator
 \vskip 0.2cm
 \label{sec:oboltzmann}
-{\noindent \small \ctprun \opt \xmloptions  \seg  \xmlsegments \sql  \sqlstate \exe \calc{oboltzmann} }
+{\noindent \small \ctprun \opt \xmloptions   \sql  \sqlstate \exe \calc{oboltzmann} }
 
 \subsection{Current}
 \label{sec:vaverage}
@@ -85,7 +85,7 @@ A large value of the local current indicates that the site contributes considera
 
 Site currents and mobility can be obtained using the \calc{vaverage} calculator
 \vskip 0.2cm
-{\noindent \small \ctprun \opt \xmloptions  \seg  \xmlsegments \sql  \sqlstate \exe \calc{vaverage} }
+{\noindent \small \ctprun \opt \xmloptions   \sql  \sqlstate \exe \calc{vaverage} }
 
 
 \subsection{Mobility and diffusion constant}
