--- a/theory/correlations.tex
+++ b/theory/correlations.tex
@@ -17,5 +17,5 @@ For systems with spatial correlations, variations in site energy differences, $\
 
 Note that the \calc{eanalyze} calculator takes into account {\em all} contributions to the site energies 
 \vskip 0.2cm
-{\noindent \small \ctprun \opt \xmloptions  \seg  \xmlsegments \sql  \sqlstate \exe \calc{eanalyze} }
+{\noindent \small \ctprun \opt \xmloptions \sql  \sqlstate \exe \calc{eanalyze} }
 
