--- a/theory/energetic_disorder.tex
+++ b/theory/energetic_disorder.tex
@@ -35,7 +35,7 @@ Evaluation of the electrostatic contribution is provided by the \calc{ecoulomb} 
 
 The electrostatic site energies are saved to the \sqlstate file:
 
-{\noindent \small \ctprun \opt \xmloptions  \seg  \xmlsegments \sql  \sqlstate \exe  \calc{ecoulomb} }
+{\noindent \small \ctprun \opt \xmloptions  \sql  \sqlstate \exe  \calc{ecoulomb} }
 
 \subsection{Internal energy difference}
 \label{sec:internal_energy}
