--- a/theory/moo.tex
+++ b/theory/moo.tex
@@ -14,4 +14,4 @@ Since \moo constructs the Fock operator of a dimer from the  molecular orbitals 
 
 The transfer integrals are saved to the \sqlstate file:
 
-{\noindent \small \ctprun \opt \xmloptions  \seg  \xmlsegments \sql  \sqlstate \exe  \calc{izindo} }
+{\noindent \small \ctprun \opt \xmloptions  \sql  \sqlstate \exe  \calc{izindo} }
