--- a/theory/rate.tex
+++ b/theory/rate.tex
@@ -81,5 +81,5 @@ Numerical estimates show that if  $\lambda_{ij}^\text{int} \approx \lambda_{ij}^
 
 Rates are calculated and saved into the \sqlstate file by the \calc{rates} \calculator
 
-{\noindent \small \ctprun \opt \xmloptions  \seg  \xmlsegments \sql  \sqlstate \exe  \calc{rates} }
+{\noindent \small \ctprun \opt \xmloptions \sql  \sqlstate \exe  \calc{rates} }
 \vskip 0.2cm
