new calculator parsing

--- a/newcommands.tex
+++ b/newcommands.tex
@@ -6,7 +6,7 @@
 \newcommand{\Fig}[1]{Figure~\ref{fig:#1}}
 \newcommand{\sect}[1]{section~\ref{sec:#1}}
 
-\newcommand{\slink}[2]{\hyperref[sec:#1]{#2}}
+\newcommand{\slink}[2]{\hyperref[#1]{#2}}
 
 
 \newcommand{\xml}{XML\xspace}
